@@ -31,6 +31,7 @@
  * Fixed [block] in [block] with [filter] bug.
  * Added support for KPATH_VALUE(ClassName) in custom queries. <==== TODO: Document
  * Fixed class scoping Contact? when current node is more specialized.
+ * Fixed bug on syntax error in Acl query.
 
 == 1.2.0, 1.2.1 2012-05-01
 
